# MUSE

./: LICENSE  README.md  muse_cmakelocal  muse_install_component  muse_localinstall  muse_reinstall
libmuse/: .gitignore  AUTHORS  Doxyfile.in  README  TODO  autogen.sh  config.h.in  configure.ac  libmuse.pc.in
libmuse/configs/: autoconf_full.xml  autoconf_simple.xml  config3.xml
libmuse/m4/: ax_prog_doxygen.m4
libmuse/muse/: apply.hpp  autoconfiguration.hpp  bounds_container.hpp  convex_hull_container.hpp  filter.hpp  module_service.hpp  muse.hpp  primitive_touch.hpp
libmuse/src/: apply.cpp  autoconfiguration.cpp  bounds_container.cpp  config_commons_internal.hpp  convex_hull_container.cpp  filter.cpp  framework_init.cpp  module_service.cpp  polygonal_container_core.cpp  polygonal_container_core.hpp  primitive_touch.cpp
libmuse/tests/: autoconf_test.cpp  convex_hull_container_test.cpp
libmuse/tools/: stdout.cpp
parsers/recognizers/: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  configure.ac  libmuse_recognizers.pc.in
parsers/recognizers/doxygen_aux/: mainpage.dox  namespaces.dox
parsers/recognizers/muse/recognizers/: dollar_n.hpp  dollar_recognizer.hpp  io_utils.hpp  libreco.hpp  multistroke_adaptor.hpp  protractor.hpp  recognizers_auxiliary.hpp  (+3 more)
parsers/recognizers/performanceTests/: test_DollarN.xml  test_DollarOne_Protractor_DollarN.xml  test_Protractor_DollarN.xml
parsers/recognizers/src/: dollar_n.cpp  dollar_recognizer.cpp  io_utils.cpp  protractor.cpp  recognizers_auxiliary.cpp  recognizers_utils.cpp
parsers/recognizers/templates/: arrows.xml  commons.xml  dollar_n.xml  dollar_one.xml  protractor.xml  unistroke_templates.xml
parsers/recognizers/tools/: Makefile.am  template_gen.cpp
tuio/dtuio/: Doxyfile.in  Makefile.am  aminclude.am  config.h.in  configure.ac  install-sh  libdtuio.pc.in
tuio/dtuio/dtuio/: dtuio.hpp  dtuio_marker.hpp  gesture_identification.hpp  helpers.hpp  parsers.hpp  sensor_properties.hpp  topology.hpp  topology_group_member.hpp  topology_neighbour.hpp  typedefs.hpp  utils.hpp  viewport.hpp  viewport_projector.hpp  viewport_scaler.hpp
tuio/dtuio/src/: dtuio_marker.cpp  gesture_identification.cpp  helpers.cpp  misc.cpp  sensor_properties.cpp  topology_group_member.cpp  topology_neighbour.cpp  viewport.cpp  viewport_projector.cpp  viewport_scaler.cpp
tuio/dtuio/tests/: Makefile.am  scaler_test.cpp
tuio/libkerat/: .gitignore  AUTHORS  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  NEWS  PROPOSALS  README  TODO  aminclude.am  config.h.in  configure.ac  libkerat.pc.in
tuio/libkerat/doxygen_aux/: classes.dox  mainpage.dox  namespaces.dox
tuio/libkerat/kerat/: adaptor.hpp  append_adaptor.hpp  bundle.hpp  client.hpp  exceptions.hpp  forwarding_listener.hpp  frame_manager.hpp  generic_osc_message.hpp  graph.hpp  kerat.hpp  kerat_adaptors.hpp  kerat_listeners.hpp  listener.hpp  message.hpp  message_helpers.hpp  multiplexing_adaptor.hpp  parsers.hpp  scaling_adaptor.hpp  server.hpp  server_adaptor.hpp  session_manager.hpp  simple_client.hpp  simple_server.hpp  stdout_listener.hpp  tuio_message_alive.hpp  tuio_message_alive_associations.hpp  tuio_message_area_geometry.hpp  tuio_message_bounds.hpp  tuio_message_container_association.hpp  tuio_message_control.hpp  tuio_message_convex_hull_geometry.hpp  tuio_message_data.hpp  tuio_message_frame.hpp  tuio_message_inner_contour_geometry.hpp  tuio_message_link_association.hpp  tuio_message_linked_list_association.hpp  tuio_message_linked_tree_association.hpp  tuio_message_outer_contour_geometry.hpp  tuio_message_pointer.hpp  tuio_message_raw.hpp  (+8 more)
tuio/libkerat/src/: append_adaptor.cpp  bundle.cpp  exceptions.cpp  forwarding_listener.cpp  frame_manager.cpp  generic_osc_message.cpp  interfaces.cpp  message_helpers.cpp  multiplexing_adaptor.cpp  scaling_adaptor.cpp  session_manager.cpp  simple_client.cpp  simple_server.cpp  stdout_listener.cpp  tuio_message_alive.cpp  tuio_message_alive_associations.cpp  tuio_message_area_geometry.cpp  tuio_message_bounds.cpp  tuio_message_container_association.cpp  tuio_message_control.cpp  tuio_message_convex_hull_geometry.cpp  tuio_message_data.cpp  tuio_message_frame.cpp  tuio_message_inner_contour_geometry.cpp  tuio_message_link_association.cpp  tuio_message_linked_list_association.cpp  tuio_message_linked_tree_association.cpp  tuio_message_outer_contour_geometry.cpp  tuio_message_pointer.cpp  tuio_message_raw.cpp  tuio_message_signal.cpp  tuio_message_skeleton_geometry.cpp  tuio_message_skeleton_volume_geometry.cpp  tuio_message_symbol.cpp  tuio_message_token.cpp  utils.cpp
tuio/libkerat/tests/: Makefile.am  graph_basic_test.cpp  graph_connected_components.cpp  graph_isomorphy.cpp  multiplexing_adaptor_test.cpp  parsers_test.cpp
tuio/libkerat/tools/: Makefile.am  static_source.cpp  stdout.cpp
utils/mirror/: AUTHORS  Makefile.am  README  common.cpp  common.hpp  configure.ac  mirror.cpp  mirrorctl.cpp
utils/text_source/: AUTHORS  Makefile.am  README  config.h.in  configure.ac  text_source.cpp
utils/touchpoints/: Makefile.am  NEWS  README  configure.ac  point_renderer.cpp  point_renderer.hpp  touchpoints.conf.example  touchpoints.cpp
wrappers/mwkinect/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  mwkinect.xml
wrappers/mwkinect/src/: cv_common.cpp  cv_common.hpp  gtk_calibrate.hpp  gtk_ui.cpp  gtk_ui.hpp  kinect_device.cpp  kinect_device.hpp  mwkinect.cpp  nodeconfig.cpp  nodeconfig.hpp  wrapper.cpp  wrapper.hpp
wrappers/mwtouch/: AUTHORS  COPYING  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  iiyama.conf.example  mwtouch.xml  replay.conf.example
wrappers/mwtouch/src/: axis.cpp  axis.hpp  common.hpp  device.cpp  device.hpp  event.cpp  event.hpp  event_storage.cpp  event_storage.hpp  eventdumper.cpp  eventdumper.hpp  geometry.cpp  geometry.hpp  geometry_primitives.hpp  mwtouch-calibrate.cpp  mwtouch.cpp  nodeconfig.cpp  nodeconfig.hpp  window.cpp  window.hpp  wrapper.cpp  wrapper.hpp  xdevice.cpp  xdevice.hpp
wrappers/mwtouch/tests/: Makefile  geometry_test.cpp
(+44 files in other folders)
